[package]
name = "async-benchmarks"
version = "0.1.0"
authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "8546ff826db8dba1e39b4119ad909fb6cab2492a" }
async-std = "1.1.0"
num_cpus = "1.11.1"
