[package]
name = "async-benchmarks"
version = "0.1.0"
authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
async-std = "1.5.0"
num_cpus = "1.13.0"
